2009-07-19  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (main):
	Add PA properties to the binary (Closes: #573912)

2009-07-19  Bastien Nocera  <hadess@hadess.net>

	* src/totem-audio-preview.c (main): Add PA properties
	to the binary (Closes: #573912)

2009-07-19  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: Build the code first, and the docs last

2009-07-19  Philip Withnall  <philip@tecnocode.co.uk>

	* data/totem.ui:
	* src/plugins/opensubtitles/opensubtitles.py:
	* src/totem-menu.c (totem_subtitles_update): Move subtitles-related
	menu items to View → Subtitles. (Closes: #581366)

2009-07-19  Philip Withnall  <philip@tecnocode.co.uk>

	* data/fullscreen.glade:
	* data/mozilla-viewer.glade:
	* data/playlist.glade:
	* data/plugins.glade:
	* data/properties.glade:
	* data/totem.glade:
	* data/uri.glade: Removed glade files; Glade can now edit GtkBuilder
	UI files.

2009-07-18  Philip Withnall  <philip@tecnocode.co.uk>

	* src/backend/bacon-resize.c (bacon_resize_resize),
	(bacon_resize_restore):
	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_open), (bacon_video_widget_seek_time),
	(bacon_video_widget_set_logo):
	* src/backend/bacon-video-widget.h:
	* src/backend/bvw-test.c (test_bvw_set_mrl), (on_redirect),
	(on_eos_event), (main):
	* src/backend/video-utils.c (totem_time_to_string),
	(totem_time_to_string_text):
	* src/plugins/brasero-disc-recorder/totem-disc-recorder.c
	(totem_disc_recorder_plugin_start_burning):
	* src/plugins/properties/bacon-video-widget-properties.c
	(bacon_video_widget_properties_from_time):
	* src/plugins/properties/bacon-video-widget-properties.h:
	* src/plugins/publish/totem-publish.c
	(totem_publish_plugin_playlist_cb):
	* src/plugins/screenshot/totem-gallery.c
	(dialog_response_callback):
	* src/plugins/screenshot/totem-screenshot.c (drag_data_get):
	* src/plugins/skipto/totem-skipto-plugin.c
	(totem_skipto_update_from_state):