@@ -1,3 +1,9 @@
+2009-07-19  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* src/plugins/opensubtitles/opensubtitles.py:
+	* src/plugins/opensubtitles/opensubtitles.ui: Fixed underlines in the
+	OpenSubtitles interface, and removed use of a GLib 2.18-only function
+
 2009-07-19  Bastien Nocera  <hadess@hadess.net>
 
 	* browser-plugin/totem-plugin-viewer.c (main):
